fixed error message align to align-items

--- a/mstyle.css
+++ b/mstyle.css
@@ -86,7 +86,7 @@ div.sbottom{
         font-weight: bolder;
         overflow:auto;
         box-shadow: 2px 2px 5px #000000;
-        align: stretch;
+        align-items: stretch;
     }
     a.sidebar:hover {
         background: linear-gradient(180deg, #4a4a4a 0% 74%, #505050 100%);;
